smaller pagination link text to avoid wrapping on mobile

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -161,6 +161,7 @@ button,
 	border: 1px solid rgba(0,0,0,0);
 	text-decoration: none;
 	display: inline-block;
+	white-space: nowrap;
 	margin-block-end: 0.25rem;
 	&:hover {
 		border: 1px solid var(--tagBorder);
